--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -469,54 +469,26 @@ jobs:
       #     pip3 install requests argparse
       #     BASE_URL=${{ secrets.SIGN_BASE_URL }} SECRET_KEY=${{ secrets.SIGN_SECRET_KEY }} python3 res/job.py sign_files ./rustdesk/
 
-      - name: Report Status
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: ${{ env.STATUS_URL }}
-          method: 'POST'
-          customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "70% complete, this step takes about 5 minutes, be patient."}'
-      
-      - name: zip dlls
-        continue-on-error: true
-        shell: pwsh
-        run: |
-          Compress-Archive -Path ./rustdesk/*.dll, ./rustdesk/*.exe -DestinationPath ./rustdesk/unsigned_files.zip -CompressionLevel Fastest
-
-      - name: sign dlls
-        continue-on-error: true
-        shell: bash
-        run: |
-          curl -X POST -F "file=@./rustdesk/unsigned_files.zip" \
-                -H "X-API-KEY: ${{ secrets.SIGN_API_KEY }}" \
-                -m 900 \
-                "${{ secrets.SIGN_URL }}/sign/" -o ./rustdesk/signed_files.zip 
-
-      - name: unzip dlls
-        continue-on-error: true
-        shell: pwsh
-        run: |
-          Expand-Archive -Path ./rustdesk/signed_files.zip -DestinationPath ./rustdek/ -Force
-          
-
-      - name: Create custom.txt file
-        shell: bash
-        run: |
-          echo -n "${{ env.CUSTOM }}" | cat > ./rustdesk/custom.txt
-        
-
       - name: Build self-extracted executable
         shell: bash
         if: env.UPLOAD_ARTIFACT == 'true'
         run: |
-          mv "./rustdesk/rustdesk.exe" "./rustdesk/${{ inputs.appname }}.exe" || echo "rustdesk.exe"
+          mv "./rustdesk/rustdesk.exe" "./rustdesk/${{ inputs.appname }}.exe" || echo "File already renamed"
           sed -i '/dpiAware/d' res/manifest.xml
           pushd ./libs/portable
           pip3 install -r requirements.txt
           python3 ./generate.py -f ../../rustdesk/ -o . -e "../../rustdesk/${{ inputs.appname }}.exe"
           popd
           mkdir -p ./SignOutput
-          mv ./target/release/rustdesk-portable-packer.exe "./SignOutput/rustdesk.exe"
+          mv ./target/release/rustdesk-portable-packer.exe "./SignOutput/${{ inputs.appname }}.exe"
+
+      - name: Report Status - Pre MSI
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: ${{ env.STATUS_URL }}
+          method: 'POST'
+          customHeaders: '{"Content-Type": "application/json"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "75% complete - Building MSI installer"}'
 
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
@@ -528,71 +500,40 @@ jobs:
           $myappname = "${{ inputs.appname }}" -replace '\s','_'
           # Only copy if source and destination are different
           if ("$myappname" -ne "rustdesk") {
-            cp "rustdesk/rustdesk.exe" "rustdesk/${myappname}.exe"
+            cp "rustdesk/${{ inputs.appname }}.exe" "rustdesk/${myappname}.exe"
           }
           pushd ./res/msi
           python preprocess.py --app-name "$myappname" --arp -d ../../rustdesk
           nuget restore msi.sln
           msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
-          cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/${myappname}-latest.msi
-          mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/${myappname}.msi
-          sha256sum ../../SignOutput/${myappname}.msi
+          cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/${myappname}.msi
+          popd
 
-      # - name: Sign rustdesk self-extracted file
-      #   if: env.UPLOAD_ARTIFACT == 'true' && env.SIGN_BASE_URL != ''
-      #   shell: bash
-      #   run: |
-      #     BASE_URL=${{ secrets.SIGN_BASE_URL }} SECRET_KEY=${{ secrets.SIGN_SECRET_KEY }} python3 res/job.py sign_files ./SignOutput
+      - name: Generate checksums
+        if: env.UPLOAD_ARTIFACT == 'true'
+        shell: bash
+        run: |
+          cd SignOutput
+          echo "Generating SHA-256 checksums..."
+          sha256sum *.exe > SHA256SUMS.txt
+          sha256sum *.msi >> SHA256SUMS.txt
+          cat SHA256SUMS.txt
 
-      - name: Report Status
+      - name: Upload final artifacts
+        if: env.UPLOAD_ARTIFACT == 'true'
+        uses: actions/upload-artifact@master
+        with:
+          name: ${{ inputs.appname }}-windows-${{ matrix.job.arch }}
+          path: SignOutput/
+          if-no-files-found: error
+
+      - name: Report Status - Complete
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "85% complete"}'
-
-      - name: zip exe and msi
-        continue-on-error: true
-        shell: pwsh
-        run: |
-          Compress-Archive -Path ./SignOutput/*.exe, ./SignOutput/*.msi -DestinationPath ./SignOutput/unsigned_files.zip -CompressionLevel Fastest
-
-      - name: sign exe and msi
-        continue-on-error: true
-        shell: bash
-        run: |
-          curl -X POST -F "file=@./SignOutput/unsigned_files.zip" \
-                -H "X-API-KEY: ${{ secrets.SIGN_API_KEY }}" \
-                -m 900 \
-                "${{ secrets.SIGN_URL }}/sign/" -o ./SignOutput/signed_files.zip 
-
-      - name: unzip exe and msi
-        continue-on-error: true
-        shell: pwsh
-        run: |
-          Expand-Archive -Path ./SignOutput/signed_files.zip -DestinationPath ./SignOutput/ -Force
-
-      # - name: Sign rustdesk self-extracted file
-      #   uses: GermanBluefox/code-sign-action@v7
-      #   if: env.UPLOAD_ARTIFACT == 'true'
-      #   with:
-      #     certificate: '${{ secrets.WINDOWS_PFX_BASE64 }}'
-      #     password: '${{ secrets.WINDOWS_PFX_PASSWORD }}'
-      #     certificatesha1: '${{ secrets.WINDOWS_PFX_SHA1_THUMBPRINT }}'
-      #     # certificatename: '${{ secrets.WINDOWS_PFX_NAME }}'
-      #     folder: './SignOutput'
-      #     recursive: false
-
-      # - name: Publish Release
-      #   uses: softprops/action-gh-release@v1
-      #   if: env.UPLOAD_ARTIFACT == 'true'
-      #   with:
-      #     prerelease: true
-      #     tag_name: ${{ env.TAG_NAME }}
-      #     files: |
-      #       ./SignOutput/rustdesk-*.msi
-      #       ./SignOutput/rustdesk-*.exe
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "100% complete - Build finished successfully"}'
 
       - name: rename rustdesk.exe to filename.exe
         run: |
