--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -497,12 +497,11 @@ jobs:
         if: env.UPLOAD_ARTIFACT == 'true'
         shell: pwsh
         run: |
-          $myappname = "${{ inputs.appname }}" -replace '\s','_'
           pushd ./res/msi
-          python preprocess.py --app-name "$myappname" --arp -d ../../rustdesk
+          python preprocess.py --app-name "${{ inputs.appname }}" --arp -d ../../rustdesk
           nuget restore msi.sln
           msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
-          cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/${myappname}.msi
+          cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/${{ inputs.appname }}.msi
           popd
 
       - name: Generate checksums
