--- a/.github/workflows/pre137-generator-macos.yml
+++ b/.github/workflows/pre137-generator-macos.yml
@@ -442,6 +442,13 @@ jobs:
           wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/statussort.diff
           git apply statussort.diff
 
+      - name: removeNewVersionNotif
+        continue-on-error: true
+        if: fromJson(inputs.extras).removeNewVersionNotif == 'true'
+        run: | 
+          wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/removeNewVersionNotif.diff
+          git apply removeNewVersionNotif.diff
+
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
